Fix UI render freezing. Single source of truth for hotas bit maps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,3 +121,11 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${nlohmann_json_SOURCE_DIR}/i
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
 endif()
+
+# Copy configuration files next to the built binary in a 'config' folder
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:${PROJECT_NAME}>/config"
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            "${CMAKE_CURRENT_SOURCE_DIR}/res/config"
+            "$<TARGET_FILE_DIR:${PROJECT_NAME}>/config"
+)
