canonical signal IDs, plotting fixes, mapping cleanup

--- a/imgui.ini
+++ b/imgui.ini
@@ -6,19 +6,18 @@ DockId=0x00000001,0
 
 [Window][Raw Signals]
 Pos=358,27
-Size=661,826
+Size=809,826
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Filtered Signals]
-Pos=1021,27
-Size=1723,826
+Pos=1111,27
+Size=465,826
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=2752,861
+Size=1584,861
 Collapsed=0
 
 [Window][Debug##Default]
@@ -30,18 +29,38 @@ Collapsed=0
 Pos=358,27
 Size=661,826
 Collapsed=0
-DockId=0x00000003,1
 
 [Window][Mappings]
-Pos=1021,27
-Size=1723,826
+Pos=1055,27
+Size=521,826
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000004
+
+[Window][Stick]
+Pos=358,27
+Size=751,826
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Throttle]
+Pos=358,27
+Size=751,826
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Select Keyboard Key]
+Pos=382,275
+Size=820,310
+Collapsed=0
+
+[Table][0x107E4C39,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=8,27 Size=2736,826 Split=X
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=8,27 Size=1568,826 Split=X
   DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=348,861 Selected=0xCE6F6A26
   DockNode    ID=0x00000002 Parent=0x09EF459F SizeRef=1234,861 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=661,861 CentralNode=1 Selected=0x352931E2
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1723,861 Selected=0xA14248C1
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=751,861 CentralNode=1 Selected=0x69824FBB
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=465,861 Selected=0xA14248C1
 
