--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/ViGEmClient"]
 	path = external/ViGEmClient
 	url = https://github.com/ViGEm/ViGEmClient.git
+[submodule "external/lunasvg"]
+	path = external/lunasvg
+	url = https://github.com/sammycage/lunasvg
