--- a/res/config/filter_settings.cfg
+++ b/res/config/filter_settings.cfg
@@ -1,9 +1,9 @@
 # Filter settings
 enabled=1
-analog_delta=0.25
+analog_delta=0.15
 analog_return=0.15
-digital_max_ms=5
-window_seconds=30
+digital_max_ms=45.76
+window_seconds=10
 virtual_output=1
 left_trigger_digital=0
 right_trigger_digital=0
@@ -27,3 +27,54 @@ filter_dpad_up=none
 filter_dpad_down=none
 filter_dpad_left=none
 filter_dpad_right=none
+filter_stick_JOY_X=none
+filter_stick_JOY_Y=none
+filter_stick_JOY_Z=none
+filter_stick_C_JOY_X=none
+filter_stick_C_JOY_Y=none
+filter_stick_C=none
+filter_stick_TRIGGER=none
+filter_stick_A=none
+filter_stick_B=none
+filter_stick_D=none
+filter_stick_E=none
+filter_stick_POV=none
+filter_stick_H1=none
+filter_stick_H2=none
+filter_throttle_LEFT_THROTTLE=analog
+filter_throttle_RIGHT_THROTTLE=analog
+filter_throttle_F_WHEEL=none
+filter_throttle_G_WHEEL=none
+filter_throttle_RTY3=none
+filter_throttle_RTY4=none
+filter_throttle_THUMB_JOY_X=none
+filter_throttle_THUMB_JOY_Y=none
+filter_throttle_PINKY_ENCODER=none
+filter_throttle_THUMB_JOY_PRESS=none
+filter_throttle_E=digital
+filter_throttle_F=digital
+filter_throttle_G=digital
+filter_throttle_H=digital
+filter_throttle_I=digital
+filter_throttle_K1_UP=digital
+filter_throttle_K1_DOWN=digital
+filter_throttle_SLIDE=digital
+filter_throttle_SW1=digital
+filter_throttle_SW2=digital
+filter_throttle_SW3=digital
+filter_throttle_SW4=digital
+filter_throttle_SW5=digital
+filter_throttle_SW6=digital
+filter_throttle_TGL1_UP=digital
+filter_throttle_TGL1_DOWN=digital
+filter_throttle_TGL2_UP=digital
+filter_throttle_TGL2_DOWN=digital
+filter_throttle_TGL3_UP=digital
+filter_throttle_TGL3_DOWN=digital
+filter_throttle_TGL4_UP=digital
+filter_throttle_TGL4_DOWN=digital
+filter_throttle_M1=none
+filter_throttle_M2=none
+filter_throttle_S1=none
+filter_throttle_H3=none
+filter_throttle_H4=none
