Update device id mappings and add graphing of virtual controller output

--- a/res/config/filter_settings.cfg
+++ b/res/config/filter_settings.cfg
@@ -76,5 +76,5 @@ filter_throttle_TGL4_DOWN=digital
 filter_throttle_M1=none
 filter_throttle_M2=none
 filter_throttle_S1=none
-filter_throttle_H3=none
-filter_throttle_H4=none
+filter_throttle_H3=digital
+filter_throttle_H4=digital
