Fix relative path issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,3 +145,11 @@ add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
             "${CMAKE_CURRENT_SOURCE_DIR}/res/config"
             "$<TARGET_FILE_DIR:${PROJECT_NAME}>/config"
 )
+
+# Copy graphics assets next to the executable for portable runs (single ./graphics folder)
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:${PROJECT_NAME}>/graphics"
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_CURRENT_SOURCE_DIR}/res/graphics"
+        "$<TARGET_FILE_DIR:${PROJECT_NAME}>/graphics"
+)
